# fyp-worker-dispatcher

./: .gitattributes  .gitignore  Makefile  README.md  SETTING_UP_MASTER.md  all_packages.txt  benchmark_candidates.txt  config.sexp  deploy_config.sexp  dev_config.sexp  fyq_task.txt  gen_hyperparams.sh  package_list.txt  package_list.txt.bak  plot_all_training_logs.sh  prod_config.sexp  provision_workers.sh  run_dev.sh  run_fyq_experiments.sh  run_many_experiments.sh  run_many_parallel_experiments.sh  run_parallel_experiments_from_file.sh  run_prod.sh  setup_eval_deps.sh  sweep_b_from_ridge.sh  train_decision_model.sh  train_familiarity_model.sh  train_policy_model.sh  train_short_term_model.sh  training_tasks.txt  worker_dispatcher.opam
analysis/: .gitattributes  .gitignore  Makefile  README.md  a.txt  batch_execute.py  class_distribution.csv  describe_problem.py  extract_all.sh  extract_all_commands.txt  extract_all_node_rewards_from_processed_data.sh  extract_data_from_experiments.py  fast.cpp  (+52 more)
analysis-scripts/: README.md  describe_problem.py  extract_all.sh  extract_data_from_experiments.py  inlining_tree.py  learn_linear_general_reward.py  learn_problem.py  learning_trees.py  plot_gc_stats_and_perf_counters.py  print_linear_general_reward.py  print_solution.py  save_sparse_matrix.py  test_load_tree.py
analysis-specs/: .gitignore  ALL.sexp  TEMPLATE.sexp  almabench.sexp  bdd.sexp  fft.sexp  floats-in-functor.sexp  gen_all.sh  gen_out_of_sample.sh  hamming.sexp  kahan-sum.sexp  kb.sexp  lens.sexp  lexifi.sexp  quicksort.sexp  sequence-cps.sexp  sequence.sexp
(+10768 files in other folders)
