opam-version: "1.2"
version: "1.0"
maintainer: "fyq14@imperial.ac.uk"
authors: ["Fu Yong Quah"]
homepage: "https://github.com/fyquah95/fyp-worker-dispatcher"
bug-reports: "https://github.com/fyquah95/fyp-worker-dispatcher/issues"
homepage: "https://github.com/fyquah95/fyp-worker-dispatcher.git"
license: "Apache-2.0"
build: [ ["jbuilder" "build"] ]
depends: [ "core" "async" ]
